res_pjsip_sdp_rtp: Fix opus pass-through

UA implementations that support opus use the optional encoder
parameters in the rtpmap attributes in the SDP to indicate the number
of channels, for example:

    a=rtpmap:111 opus/48000/2

The RTP engine doesn't have a way of persisting this information, so
when we copy to the outgoing leg, the encoding parameters are lost:

    a=rtpmap:111 opus/48000

Which causes a codec negotiation failure. This patch hacks in a check
for opus and adds the '/2' so that negoitation will succeed and
pass-through will work.

Note that this will still spam the logs with:

    codec.c: Unable to calculate samples for codec opus

I'm not sure at this point why Asterisk cares about the number of
samples in a native bridge, but the audio is still properly passed
from one endpoint to another.

ASTERISK-24779 #close
Reported by: PowerPBX

Change-Id: Ieff1ccf4af6ec0c7d20f6f85b4dbe365d9431436